# syn-locator

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: check.yml  test.yml
benches/: core.rs
src/: find.rs  lib.rs  loc.rs
tests/: test.rs
