[package]
name = "syn-locator"
version = "0.1.6"
edition = "2021"
rust-version = "1.65"
description = "A source code locator for syn crate"
repository = "https://github.com/ecoricemon/syn-locator"
license = "Apache-2.0 OR MIT"
keywords = ["syn"]

[lib]
crate-type = ["rlib"]

[features]
find = []

[dependencies]
any-intern = "0.1.3"
regex = "1.12.3"
paste = "1.0.15"
once_cell = "1.21.3"
fxhash = "0.2.1"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
