[package]
name = "syn-locator"
version = "0.1.7"
edition = "2021"
rust-version = "1.65"
description = "A source code locator for syn crate"
repository = "https://github.com/ecoricemon/syn-locator"
license = "Apache-2.0 OR MIT"
keywords = ["syn"]

[features]
find = []

[dependencies]
regex = "1.12.3"
paste = "1.0.15"
once_cell = "1.21.3"
fxhash = "0.2.1"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
