[package]
name = "syn-locator"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = "A source mapper for syn syntax trees"
repository = "https://github.com/ecoricemon/syn-locator"
license = "Apache-2.0 OR MIT"
keywords = ["syn", "ast", "source-location", "code-analysis", "diagnostics"]

[features]
find = []

[dependencies]
paste = "1.0.15"
fxhash = "0.2.1"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
